# Coverage

./: CMakeLists.txt
src/: CMakeLists.txt  add.cc  add.h  main.cc
test/: CMakeLists.txt  gtest-CMakeLists.txt  mytest.cc
